// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should defaultNpmScriptsOrder 1`] = `
{
  "build": "echo build",
  "ci": "echo ci",
  "coverage": "echo coverage",
  "dev": "echo dev",
  "install": "echo install",
  "lerna": "echo lerna",
  "link": "echo link",
  "lint": "echo lint",
  "npm": "echo npm",
  "pack": "echo pack",
  "postinstallOnly": "echo postinstallOnly",
  "postpack": "echo postpack",
  "postpublish": "echo postpublish",
  "postpublishOnly": "echo postpublishOnly",
  "postuninstallOnly": "echo postuninstallOnly",
  "preinstallOnly": "echo preinstallOnly",
  "prepack": "echo prepack",
  "prepare": "echo prepare",
  "prepareOnly": "echo prepareOnly",
  "prepublish": "echo prepublish",
  "prepublishOnly": "echo prepublishOnly",
  "preuninstallOnly": "echo preuninstallOnly",
  "publish": "echo publish",
  "restart": "echo restart",
  "review": "echo review",
  "shrinkwrap": "echo shrinkwrap",
  "start": "echo start",
  "stop": "echo stop",
  "test": "echo test",
  "uninstall": "echo uninstall",
  "version": "echo version",
  "ws": "echo ws",
  "yarn": "echo yarn",
}
`;

exports[`should defaultNpmScriptsOrder 2`] = `
[
  "start",
  "dev",
  "restart",
  "stop",
  "review",
  "coverage",
  "lint",
  "test",
  "preinstallOnly",
  "install",
  "postinstallOnly",
  "preuninstallOnly",
  "uninstall",
  "postuninstallOnly",
  "build",
  "link",
  "ci",
  "npm",
  "yarn",
  "lerna",
  "ws",
  "version",
  "prepareOnly",
  "prepublish",
  "prepare",
  "prepublishOnly",
  "prepack",
  "pack",
  "postpack",
  "publish",
  "postpublish",
  "postpublishOnly",
  "shrinkwrap",
]
`;

exports[`should defaultNpmScriptsOrder 3`] = `
"{
  "start": "echo start",
  "dev": "echo dev",
  "restart": "echo restart",
  "stop": "echo stop",
  "review": "echo review",
  "coverage": "echo coverage",
  "lint": "echo lint",
  "test": "echo test",
  "preinstallOnly": "echo preinstallOnly",
  "install": "echo install",
  "postinstallOnly": "echo postinstallOnly",
  "preuninstallOnly": "echo preuninstallOnly",
  "uninstall": "echo uninstall",
  "postuninstallOnly": "echo postuninstallOnly",
  "build": "echo build",
  "link": "echo link",
  "ci": "echo ci",
  "npm": "echo npm",
  "yarn": "echo yarn",
  "lerna": "echo lerna",
  "ws": "echo ws",
  "version": "echo version",
  "prepareOnly": "echo prepareOnly",
  "prepublish": "echo prepublish",
  "prepare": "echo prepare",
  "prepublishOnly": "echo prepublishOnly",
  "prepack": "echo prepack",
  "pack": "echo pack",
  "postpack": "echo postpack",
  "publish": "echo publish",
  "postpublish": "echo postpublish",
  "postpublishOnly": "echo postpublishOnly",
  "shrinkwrap": "echo shrinkwrap"
}"
`;

exports[`should defaultNpmScriptsOrder 4`] = `
{
  "build": "14",
  "ci": "16",
  "coverage": "5",
  "dev": "1",
  "install": "9",
  "lerna": "19",
  "link": "15",
  "lint": "6",
  "npm": "17",
  "pack": "27",
  "postinstallOnly": "10",
  "postpack": "28",
  "postpublish": "30",
  "postpublishOnly": "31",
  "postuninstallOnly": "13",
  "preinstallOnly": "8",
  "prepack": "26",
  "prepare": "24",
  "prepareOnly": "22",
  "prepublish": "23",
  "prepublishOnly": "25",
  "preuninstallOnly": "11",
  "publish": "29",
  "restart": "2",
  "review": "4",
  "shrinkwrap": "32",
  "start": "0",
  "stop": "3",
  "test": "7",
  "uninstall": "12",
  "version": "21",
  "ws": "20",
  "yarn": "18",
}
`;

exports[`should defaultNpmScriptsOrder 5`] = `
[
  "start",
  "dev",
  "restart",
  "stop",
  "review",
  "coverage",
  "lint",
  "test",
  "preinstallOnly",
  "install",
  "postinstallOnly",
  "preuninstallOnly",
  "uninstall",
  "postuninstallOnly",
  "build",
  "link",
  "ci",
  "npm",
  "yarn",
  "lerna",
  "ws",
  "version",
  "prepareOnly",
  "prepublish",
  "prepare",
  "prepublishOnly",
  "prepack",
  "pack",
  "postpack",
  "publish",
  "postpublish",
  "postpublishOnly",
  "shrinkwrap",
]
`;

exports[`should defaultNpmScriptsOrder 6`] = `
"{
  "start": "0",
  "dev": "1",
  "restart": "2",
  "stop": "3",
  "review": "4",
  "coverage": "5",
  "lint": "6",
  "test": "7",
  "preinstallOnly": "8",
  "install": "9",
  "postinstallOnly": "10",
  "preuninstallOnly": "11",
  "uninstall": "12",
  "postuninstallOnly": "13",
  "build": "14",
  "link": "15",
  "ci": "16",
  "npm": "17",
  "yarn": "18",
  "lerna": "19",
  "ws": "20",
  "version": "21",
  "prepareOnly": "22",
  "prepublish": "23",
  "prepare": "24",
  "prepublishOnly": "25",
  "prepack": "26",
  "pack": "27",
  "postpack": "28",
  "publish": "29",
  "postpublish": "30",
  "postpublishOnly": "31",
  "shrinkwrap": "32"
}"
`;

exports[`should defaultNpmScriptsOrder v2 1`] = `
{
  "build": "echo build",
  "ci": "echo ci",
  "coverage": "echo coverage",
  "dev": "echo dev",
  "install": "echo install",
  "lerna": "echo lerna",
  "link": "echo link",
  "lint": "echo lint",
  "npm": "echo npm",
  "pack": "echo pack",
  "postbuild": "echo postbuild",
  "postci": "echo postci",
  "postcoverage": "echo postcoverage",
  "postdev": "echo postdev",
  "postinstall": "echo postinstall",
  "postinstallOnly": "echo postinstallOnly",
  "postlerna": "echo postlerna",
  "postlink": "echo postlink",
  "postlint": "echo postlint",
  "postnpm": "echo postnpm",
  "postpack": "echo postpack",
  "postpreinstallOnly": "echo postpreinstallOnly",
  "postprepack": "echo postprepack",
  "postprepare": "echo postprepare",
  "postprepareOnly": "echo postprepareOnly",
  "postprepublish": "echo postprepublish",
  "postprepublishOnly": "echo postprepublishOnly",
  "postpreuninstallOnly": "echo postpreuninstallOnly",
  "postpublish": "echo postpublish",
  "postpublishOnly": "echo postpublishOnly",
  "postrestart": "echo postrestart",
  "postreview": "echo postreview",
  "postshrinkwrap": "echo postshrinkwrap",
  "poststart": "echo poststart",
  "poststop": "echo poststop",
  "posttest": "echo posttest",
  "postuninstall": "echo postuninstall",
  "postuninstallOnly": "echo postuninstallOnly",
  "postversion": "echo postversion",
  "postws": "echo postws",
  "postyarn": "echo postyarn",
  "prebuild": "echo prebuild",
  "preci": "echo preci",
  "precoverage": "echo precoverage",
  "predev": "echo predev",
  "preinstall": "echo preinstall",
  "preinstallOnly": "echo preinstallOnly",
  "prelerna": "echo prelerna",
  "prelink": "echo prelink",
  "prelint": "echo prelint",
  "prenpm": "echo prenpm",
  "prepack": "echo prepack",
  "prepare": "echo prepare",
  "prepareOnly": "echo prepareOnly",
  "prepostinstallOnly": "echo prepostinstallOnly",
  "prepostpack": "echo prepostpack",
  "prepostpublish": "echo prepostpublish",
  "prepostpublishOnly": "echo prepostpublishOnly",
  "prepostuninstallOnly": "echo prepostuninstallOnly",
  "prepublish": "echo prepublish",
  "prepublishOnly": "echo prepublishOnly",
  "prerestart": "echo prerestart",
  "prereview": "echo prereview",
  "preshrinkwrap": "echo preshrinkwrap",
  "prestart": "echo prestart",
  "prestop": "echo prestop",
  "pretest": "echo pretest",
  "preuninstall": "echo preuninstall",
  "preuninstallOnly": "echo preuninstallOnly",
  "preversion": "echo preversion",
  "prews": "echo prews",
  "preyarn": "echo preyarn",
  "publish": "echo publish",
  "restart": "echo restart",
  "review": "echo review",
  "shrinkwrap": "echo shrinkwrap",
  "start": "echo start",
  "stop": "echo stop",
  "test": "echo test",
  "uninstall": "echo uninstall",
  "version": "echo version",
  "ws": "echo ws",
  "yarn": "echo yarn",
}
`;

exports[`should defaultNpmScriptsOrder v2 2`] = `
[
  "prestart",
  "start",
  "poststart",
  "predev",
  "dev",
  "postdev",
  "prerestart",
  "restart",
  "postrestart",
  "prestop",
  "stop",
  "poststop",
  "prereview",
  "review",
  "postreview",
  "precoverage",
  "coverage",
  "postcoverage",
  "prelint",
  "lint",
  "postlint",
  "pretest",
  "test",
  "posttest",
  "preinstallOnly",
  "postpreinstallOnly",
  "preinstall",
  "install",
  "postinstall",
  "prepostinstallOnly",
  "postinstallOnly",
  "preuninstallOnly",
  "postpreuninstallOnly",
  "preuninstall",
  "uninstall",
  "postuninstall",
  "prepostuninstallOnly",
  "postuninstallOnly",
  "prebuild",
  "build",
  "postbuild",
  "prelink",
  "link",
  "postlink",
  "preci",
  "ci",
  "postci",
  "prenpm",
  "npm",
  "postnpm",
  "preyarn",
  "yarn",
  "postyarn",
  "prelerna",
  "lerna",
  "postlerna",
  "prews",
  "ws",
  "postws",
  "preversion",
  "version",
  "postversion",
  "prepareOnly",
  "postprepareOnly",
  "prepublish",
  "postprepublish",
  "prepare",
  "postprepare",
  "prepublishOnly",
  "postprepublishOnly",
  "prepack",
  "postprepack",
  "pack",
  "postpack",
  "prepostpack",
  "publish",
  "postpublish",
  "prepostpublish",
  "prepostpublishOnly",
  "postpublishOnly",
  "preshrinkwrap",
  "shrinkwrap",
  "postshrinkwrap",
]
`;

exports[`should defaultNpmScriptsOrder v2 3`] = `
"{
  "prestart": "echo prestart",
  "start": "echo start",
  "poststart": "echo poststart",
  "predev": "echo predev",
  "dev": "echo dev",
  "postdev": "echo postdev",
  "prerestart": "echo prerestart",
  "restart": "echo restart",
  "postrestart": "echo postrestart",
  "prestop": "echo prestop",
  "stop": "echo stop",
  "poststop": "echo poststop",
  "prereview": "echo prereview",
  "review": "echo review",
  "postreview": "echo postreview",
  "precoverage": "echo precoverage",
  "coverage": "echo coverage",
  "postcoverage": "echo postcoverage",
  "prelint": "echo prelint",
  "lint": "echo lint",
  "postlint": "echo postlint",
  "pretest": "echo pretest",
  "test": "echo test",
  "posttest": "echo posttest",
  "preinstallOnly": "echo preinstallOnly",
  "postpreinstallOnly": "echo postpreinstallOnly",
  "preinstall": "echo preinstall",
  "install": "echo install",
  "postinstall": "echo postinstall",
  "prepostinstallOnly": "echo prepostinstallOnly",
  "postinstallOnly": "echo postinstallOnly",
  "preuninstallOnly": "echo preuninstallOnly",
  "postpreuninstallOnly": "echo postpreuninstallOnly",
  "preuninstall": "echo preuninstall",
  "uninstall": "echo uninstall",
  "postuninstall": "echo postuninstall",
  "prepostuninstallOnly": "echo prepostuninstallOnly",
  "postuninstallOnly": "echo postuninstallOnly",
  "prebuild": "echo prebuild",
  "build": "echo build",
  "postbuild": "echo postbuild",
  "prelink": "echo prelink",
  "link": "echo link",
  "postlink": "echo postlink",
  "preci": "echo preci",
  "ci": "echo ci",
  "postci": "echo postci",
  "prenpm": "echo prenpm",
  "npm": "echo npm",
  "postnpm": "echo postnpm",
  "preyarn": "echo preyarn",
  "yarn": "echo yarn",
  "postyarn": "echo postyarn",
  "prelerna": "echo prelerna",
  "lerna": "echo lerna",
  "postlerna": "echo postlerna",
  "prews": "echo prews",
  "ws": "echo ws",
  "postws": "echo postws",
  "preversion": "echo preversion",
  "version": "echo version",
  "postversion": "echo postversion",
  "prepareOnly": "echo prepareOnly",
  "postprepareOnly": "echo postprepareOnly",
  "prepublish": "echo prepublish",
  "postprepublish": "echo postprepublish",
  "prepare": "echo prepare",
  "postprepare": "echo postprepare",
  "prepublishOnly": "echo prepublishOnly",
  "postprepublishOnly": "echo postprepublishOnly",
  "prepack": "echo prepack",
  "postprepack": "echo postprepack",
  "pack": "echo pack",
  "postpack": "echo postpack",
  "prepostpack": "echo prepostpack",
  "publish": "echo publish",
  "postpublish": "echo postpublish",
  "prepostpublish": "echo prepostpublish",
  "prepostpublishOnly": "echo prepostpublishOnly",
  "postpublishOnly": "echo postpublishOnly",
  "preshrinkwrap": "echo preshrinkwrap",
  "shrinkwrap": "echo shrinkwrap",
  "postshrinkwrap": "echo postshrinkwrap"
}"
`;

exports[`should script lifecycle 1`] = `
{
  "_myscript": "echo _myscript",
  "_myscript_": "echo _myscript_",
  "build": "echo build",
  "ci": "echo ci",
  "coverage": "echo coverage",
  "dev": "echo dev",
  "install": "echo install",
  "installOnly": "echo installOnly",
  "lerna": "echo lerna",
  "link": "echo link",
  "lint": "echo lint",
  "myscript": "echo myscript",
  "myscript:abc": "echo myscript:abc",
  "myscript_": "echo myscript_",
  "npm": "echo npm",
  "pack": "echo pack",
  "pare": "echo pare",
  "pareOnly": "echo pareOnly",
  "post_myscript": "echo post_myscript",
  "post_myscript_": "echo post_myscript_",
  "postbuild": "echo postbuild",
  "postci": "echo postci",
  "postcoverage": "echo postcoverage",
  "postdev": "echo postdev",
  "postinstall": "echo postinstall",
  "postinstallOnly": "echo postinstallOnly",
  "postlerna": "echo postlerna",
  "postlink": "echo postlink",
  "postlint": "echo postlint",
  "postmyscript": "echo postmyscript",
  "postmyscript:abc": "echo postmyscript:abc",
  "postmyscript_": "echo postmyscript_",
  "postnpm": "echo postnpm",
  "postpack": "echo postpack",
  "postpare": "echo postpare",
  "postpareOnly": "echo postpareOnly",
  "postpostinstallOnly": "echo postpostinstallOnly",
  "postpostpack": "echo postpostpack",
  "postpostpublish": "echo postpostpublish",
  "postpostpublishOnly": "echo postpostpublishOnly",
  "postpostuninstallOnly": "echo postpostuninstallOnly",
  "postpreinstallOnly": "echo postpreinstallOnly",
  "postprepack": "echo postprepack",
  "postprepare": "echo postprepare",
  "postprepareOnly": "echo postprepareOnly",
  "postprepublish": "echo postprepublish",
  "postprepublishOnly": "echo postprepublishOnly",
  "postpreuninstallOnly": "echo postpreuninstallOnly",
  "postpublish": "echo postpublish",
  "postpublishOnly": "echo postpublishOnly",
  "postrestart": "echo postrestart",
  "postreview": "echo postreview",
  "postshrinkwrap": "echo postshrinkwrap",
  "poststart": "echo poststart",
  "poststop": "echo poststop",
  "posttest": "echo posttest",
  "postuninstall": "echo postuninstall",
  "postuninstallOnly": "echo postuninstallOnly",
  "postversion": "echo postversion",
  "postws": "echo postws",
  "postyarn": "echo postyarn",
  "pre_myscript": "echo pre_myscript",
  "pre_myscript_": "echo pre_myscript_",
  "prebuild": "echo prebuild",
  "preci": "echo preci",
  "precoverage": "echo precoverage",
  "predev": "echo predev",
  "preinstall": "echo preinstall",
  "preinstallOnly": "echo preinstallOnly",
  "prelerna": "echo prelerna",
  "prelink": "echo prelink",
  "prelint": "echo prelint",
  "premyscript": "echo premyscript",
  "premyscript:abc": "echo premyscript:abc",
  "premyscript_": "echo premyscript_",
  "prenpm": "echo prenpm",
  "prepack": "echo prepack",
  "prepare": "echo prepare",
  "prepareOnly": "echo prepareOnly",
  "prepostinstallOnly": "echo prepostinstallOnly",
  "prepostpack": "echo prepostpack",
  "prepostpublish": "echo prepostpublish",
  "prepostpublishOnly": "echo prepostpublishOnly",
  "prepostuninstallOnly": "echo prepostuninstallOnly",
  "prepreinstallOnly": "echo prepreinstallOnly",
  "preprepack": "echo preprepack",
  "preprepare": "echo preprepare",
  "preprepareOnly": "echo preprepareOnly",
  "preprepublish": "echo preprepublish",
  "preprepublishOnly": "echo preprepublishOnly",
  "prepreuninstallOnly": "echo prepreuninstallOnly",
  "prepublish": "echo prepublish",
  "prepublishOnly": "echo prepublishOnly",
  "prerestart": "echo prerestart",
  "prereview": "echo prereview",
  "preshrinkwrap": "echo preshrinkwrap",
  "prestart": "echo prestart",
  "prestop": "echo prestop",
  "pretest": "echo pretest",
  "preuninstall": "echo preuninstall",
  "preuninstallOnly": "echo preuninstallOnly",
  "preversion": "echo preversion",
  "prews": "echo prews",
  "preyarn": "echo preyarn",
  "publish": "echo publish",
  "publishOnly": "echo publishOnly",
  "restart": "echo restart",
  "review": "echo review",
  "shrinkwrap": "echo shrinkwrap",
  "start": "echo start",
  "stop": "echo stop",
  "test": "echo test",
  "uninstall": "echo uninstall",
  "uninstallOnly": "echo uninstallOnly",
  "version": "echo version",
  "ws": "echo ws",
  "yarn": "echo yarn",
}
`;

exports[`should script lifecycle 2`] = `
[
  "prestart",
  "start",
  "poststart",
  "predev",
  "dev",
  "postdev",
  "prerestart",
  "restart",
  "postrestart",
  "prestop",
  "stop",
  "poststop",
  "prereview",
  "review",
  "postreview",
  "precoverage",
  "coverage",
  "postcoverage",
  "prelint",
  "lint",
  "postlint",
  "pretest",
  "test",
  "posttest",
  "prepreinstallOnly",
  "preinstallOnly",
  "postpreinstallOnly",
  "preinstall",
  "install",
  "postinstall",
  "prepostinstallOnly",
  "postinstallOnly",
  "postpostinstallOnly",
  "prepreuninstallOnly",
  "preuninstallOnly",
  "postpreuninstallOnly",
  "preuninstall",
  "uninstall",
  "postuninstall",
  "prepostuninstallOnly",
  "postuninstallOnly",
  "postpostuninstallOnly",
  "prebuild",
  "build",
  "postbuild",
  "prelink",
  "link",
  "postlink",
  "preci",
  "ci",
  "postci",
  "prenpm",
  "npm",
  "postnpm",
  "preyarn",
  "yarn",
  "postyarn",
  "prelerna",
  "lerna",
  "postlerna",
  "prews",
  "ws",
  "postws",
  "preversion",
  "version",
  "postversion",
  "preprepareOnly",
  "prepareOnly",
  "postprepareOnly",
  "preprepublish",
  "prepublish",
  "postprepublish",
  "preprepare",
  "prepare",
  "postprepare",
  "preprepublishOnly",
  "prepublishOnly",
  "postprepublishOnly",
  "preprepack",
  "prepack",
  "postprepack",
  "pack",
  "postpack",
  "prepostpack",
  "postpostpack",
  "publish",
  "postpublish",
  "prepostpublish",
  "postpostpublish",
  "prepostpublishOnly",
  "postpublishOnly",
  "postpostpublishOnly",
  "preshrinkwrap",
  "shrinkwrap",
  "postshrinkwrap",
  "premyscript",
  "premyscript_",
  "premyscript:abc",
  "myscript",
  "myscript_",
  "_myscript",
  "_myscript_",
  "myscript:abc",
  "postmyscript",
  "postmyscript_",
  "postmyscript:abc",
  "installOnly",
  "pare",
  "postpare",
  "pareOnly",
  "postpareOnly",
  "pre_myscript",
  "pre_myscript_",
  "post_myscript",
  "post_myscript_",
  "publishOnly",
  "uninstallOnly",
]
`;

exports[`should script lifecycle 3`] = `
"{
  "prestart": "echo prestart",
  "start": "echo start",
  "poststart": "echo poststart",
  "predev": "echo predev",
  "dev": "echo dev",
  "postdev": "echo postdev",
  "prerestart": "echo prerestart",
  "restart": "echo restart",
  "postrestart": "echo postrestart",
  "prestop": "echo prestop",
  "stop": "echo stop",
  "poststop": "echo poststop",
  "prereview": "echo prereview",
  "review": "echo review",
  "postreview": "echo postreview",
  "precoverage": "echo precoverage",
  "coverage": "echo coverage",
  "postcoverage": "echo postcoverage",
  "prelint": "echo prelint",
  "lint": "echo lint",
  "postlint": "echo postlint",
  "pretest": "echo pretest",
  "test": "echo test",
  "posttest": "echo posttest",
  "prepreinstallOnly": "echo prepreinstallOnly",
  "preinstallOnly": "echo preinstallOnly",
  "postpreinstallOnly": "echo postpreinstallOnly",
  "preinstall": "echo preinstall",
  "install": "echo install",
  "postinstall": "echo postinstall",
  "prepostinstallOnly": "echo prepostinstallOnly",
  "postinstallOnly": "echo postinstallOnly",
  "postpostinstallOnly": "echo postpostinstallOnly",
  "prepreuninstallOnly": "echo prepreuninstallOnly",
  "preuninstallOnly": "echo preuninstallOnly",
  "postpreuninstallOnly": "echo postpreuninstallOnly",
  "preuninstall": "echo preuninstall",
  "uninstall": "echo uninstall",
  "postuninstall": "echo postuninstall",
  "prepostuninstallOnly": "echo prepostuninstallOnly",
  "postuninstallOnly": "echo postuninstallOnly",
  "postpostuninstallOnly": "echo postpostuninstallOnly",
  "prebuild": "echo prebuild",
  "build": "echo build",
  "postbuild": "echo postbuild",
  "prelink": "echo prelink",
  "link": "echo link",
  "postlink": "echo postlink",
  "preci": "echo preci",
  "ci": "echo ci",
  "postci": "echo postci",
  "prenpm": "echo prenpm",
  "npm": "echo npm",
  "postnpm": "echo postnpm",
  "preyarn": "echo preyarn",
  "yarn": "echo yarn",
  "postyarn": "echo postyarn",
  "prelerna": "echo prelerna",
  "lerna": "echo lerna",
  "postlerna": "echo postlerna",
  "prews": "echo prews",
  "ws": "echo ws",
  "postws": "echo postws",
  "preversion": "echo preversion",
  "version": "echo version",
  "postversion": "echo postversion",
  "preprepareOnly": "echo preprepareOnly",
  "prepareOnly": "echo prepareOnly",
  "postprepareOnly": "echo postprepareOnly",
  "preprepublish": "echo preprepublish",
  "prepublish": "echo prepublish",
  "postprepublish": "echo postprepublish",
  "preprepare": "echo preprepare",
  "prepare": "echo prepare",
  "postprepare": "echo postprepare",
  "preprepublishOnly": "echo preprepublishOnly",
  "prepublishOnly": "echo prepublishOnly",
  "postprepublishOnly": "echo postprepublishOnly",
  "preprepack": "echo preprepack",
  "prepack": "echo prepack",
  "postprepack": "echo postprepack",
  "pack": "echo pack",
  "postpack": "echo postpack",
  "prepostpack": "echo prepostpack",
  "postpostpack": "echo postpostpack",
  "publish": "echo publish",
  "postpublish": "echo postpublish",
  "prepostpublish": "echo prepostpublish",
  "postpostpublish": "echo postpostpublish",
  "prepostpublishOnly": "echo prepostpublishOnly",
  "postpublishOnly": "echo postpublishOnly",
  "postpostpublishOnly": "echo postpostpublishOnly",
  "preshrinkwrap": "echo preshrinkwrap",
  "shrinkwrap": "echo shrinkwrap",
  "postshrinkwrap": "echo postshrinkwrap",
  "premyscript": "echo premyscript",
  "premyscript_": "echo premyscript_",
  "premyscript:abc": "echo premyscript:abc",
  "myscript": "echo myscript",
  "myscript_": "echo myscript_",
  "_myscript": "echo _myscript",
  "_myscript_": "echo _myscript_",
  "myscript:abc": "echo myscript:abc",
  "postmyscript": "echo postmyscript",
  "postmyscript_": "echo postmyscript_",
  "postmyscript:abc": "echo postmyscript:abc",
  "installOnly": "echo installOnly",
  "pare": "echo pare",
  "postpare": "echo postpare",
  "pareOnly": "echo pareOnly",
  "postpareOnly": "echo postpareOnly",
  "pre_myscript": "echo pre_myscript",
  "pre_myscript_": "echo pre_myscript_",
  "post_myscript": "echo post_myscript",
  "post_myscript_": "echo post_myscript_",
  "publishOnly": "echo publishOnly",
  "uninstallOnly": "echo uninstallOnly"
}"
`;

exports[`sort base 1`] = `
{
  "multiply": "2 * 3",
  "postinstall": "echo "Installed"",
  "postprettier": "echo "so pretty"",
  "posttest": "abc",
  "pre-fetch-info": "foo",
  "prepare": "npm run build",
  "preprettier": "echo "not pretty"",
  "pretest": "xyz",
  "prettier": "prettier -l "**/*.js"",
  "prewatch": "echo "about to watch"",
  "start": "node server.js",
  "test": "node test.js",
  "watch": "watch things",
}
`;

exports[`sort base 2`] = `
[
  "start",
  "pretest",
  "test",
  "posttest",
  "postinstall",
  "prepare",
  "multiply",
  "preprettier",
  "prettier",
  "postprettier",
  "pre-fetch-info",
  "prewatch",
  "watch",
]
`;

exports[`sort base 3`] = `
"{
  "start": "node server.js",
  "pretest": "xyz",
  "test": "node test.js",
  "posttest": "abc",
  "postinstall": "echo \\"Installed\\"",
  "prepare": "npm run build",
  "multiply": "2 * 3",
  "preprettier": "echo \\"not pretty\\"",
  "prettier": "prettier -l \\"**/*.js\\"",
  "postprettier": "echo \\"so pretty\\"",
  "pre-fetch-info": "foo",
  "prewatch": "echo \\"about to watch\\"",
  "watch": "watch things"
}"
`;

exports[`sort base v2 1`] = `
{
  "_postprettier": "echo "so pretty"",
  "multiply": "2 * 3",
  "postinstall": "echo "Installed"",
  "posttest": "abc",
  "pre-fetch-info": "foo",
  "prepare": "npm run build",
  "preprettier_": "echo "not pretty"",
  "pretest": "xyz",
  "prettier_": "prettier -l "**/*.js"",
  "prewatch": "echo "about to watch"",
  "start": "node server.js",
  "test": "node test.js",
  "watch": "watch things",
}
`;

exports[`sort base v2 2`] = `
[
  "start",
  "pretest",
  "test",
  "posttest",
  "postinstall",
  "prepare",
  "preprettier_",
  "prettier_",
  "_postprettier",
  "multiply",
  "pre-fetch-info",
  "prewatch",
  "watch",
]
`;

exports[`sort base v2 3`] = `
"{
  "start": "node server.js",
  "pretest": "xyz",
  "test": "node test.js",
  "posttest": "abc",
  "postinstall": "echo \\"Installed\\"",
  "prepare": "npm run build",
  "preprettier_": "echo \\"not pretty\\"",
  "prettier_": "prettier -l \\"**/*.js\\"",
  "_postprettier": "echo \\"so pretty\\"",
  "multiply": "2 * 3",
  "pre-fetch-info": "foo",
  "prewatch": "echo \\"about to watch\\"",
  "watch": "watch things"
}"
`;

exports[`sort yarn-tool scripts 1`] = `
{
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "ncu": "npx yarn-tool ncu -u",
  "npm:publish": "npm publish",
  "postpublish_": "git commit -m "chore(release): publish" .",
  "prepublish:lockfile": "npx sync-lockfile .",
  "prepublishOnly_": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "sort-package-json": "npx yarn-tool sort",
  "test": "echo "Error: no test specified" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register "!(node_modules)/**/*.{test,spec}.{ts,tsx}"",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json",
}
`;

exports[`sort yarn-tool scripts 2`] = `
[
  "coverage",
  "lint",
  "test",
  "test:mocha",
  "npm:publish",
  "prepublish:lockfile",
  "prepublishOnly_",
  "postpublish_",
  "ncu",
  "sort-package-json",
  "tsc:default",
  "tsc:esm",
]
`;

exports[`sort yarn-tool scripts 3`] = `
"{
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "test": "echo \\"Error: no test specified\\" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register \\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\"",
  "npm:publish": "npm publish",
  "prepublish:lockfile": "npx sync-lockfile .",
  "prepublishOnly_": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "postpublish_": "git commit -m \\"chore(release): publish\\" .",
  "ncu": "npx yarn-tool ncu -u",
  "sort-package-json": "npx yarn-tool sort",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json"
}"
`;

exports[`sort yarn-tool scripts 4`] = `
{
  "_postpublish_": "git commit -m "chore(release): publish" .",
  "_prepublishOnly:": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "ncu": "npx yarn-tool ncu -u",
  "npm:publish": "npm publish",
  "prepublish:lockfile": "npx sync-lockfile .",
  "sort-package-json": "npx yarn-tool sort",
  "test-": "echo "Error: no test specified" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register "!(node_modules)/**/*.{test,spec}.{ts,tsx}"",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json",
}
`;

exports[`sort yarn-tool scripts 5`] = `
[
  "coverage",
  "lint",
  "test-",
  "test:mocha",
  "npm:publish",
  "prepublish:lockfile",
  "_prepublishOnly:",
  "_postpublish_",
  "ncu",
  "sort-package-json",
  "tsc:default",
  "tsc:esm",
]
`;

exports[`sort yarn-tool scripts 6`] = `
"{
  "coverage": "npx nyc yarn run test",
  "lint": "npx eslint **/*.ts",
  "test-": "echo \\"Error: no test specified\\" && exit 1",
  "test:mocha": "npx mocha --require ts-node/register \\"!(node_modules)/**/*.{test,spec}.{ts,tsx}\\"",
  "npm:publish": "npm publish",
  "prepublish:lockfile": "npx sync-lockfile .",
  "_prepublishOnly:": "yarn run ncu && yarn run sort-package-json && yarn run test",
  "_postpublish_": "git commit -m \\"chore(release): publish\\" .",
  "ncu": "npx yarn-tool ncu -u",
  "sort-package-json": "npx yarn-tool sort",
  "tsc:default": "tsc -p tsconfig.json",
  "tsc:esm": "tsc -p tsconfig.esm.json"
}"
`;
